Pagina final sin fotos

--- a/html/about.html
+++ b/html/about.html
@@ -80,8 +80,11 @@
                  <ul class="dropdown-menu">
                     <li><a href="flujofondos.html">Flujo de fondos puro</a></li>
                     <li><a href="flujofondosf.html">Flujo de fondos financiado</a></li>
+                    <li><a href="resumen.html">Resumen</a></li>
+
                   </ul>
                 </li>
+                <li><a href="maqueta.html"> <i class="fa fa-clipboard" aria-hidden="true"></i> Maqueta </a></li>
               </ul>
             </div>
           </div>
@@ -100,14 +103,26 @@
 
       <!-- Three columns of text below the carousel -->
       <div class="row">
+      <div class="col-lg-4 col-lg-offset-2">
+          <img class="img-circle" src="../images/miguel.jpg" alt="Generic placeholder image" height="140" width="140">
+          <h3>Miguel David Rojas López Ph.D.</h3>
+          <h4>Pofesor asociado</h4>
+          <h5>mdrojas@unal.edu.co</h5>
+        </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/isabel.jpg" alt="Generic placeholder image" height="140" width="140">
+          <h3>Laura Isabel Martínez Murillo</h3>
+          <h4>Ingeniera administradora</h4>
+          <h5>limartinezm@unal.edu.co</h5>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="../images/laura.jpg" alt="Generic placeholder image" height="140" width="140">
           <h3>Laura Mercedes Coronado Múnera</h3>
           <h4>Estudiante de ingeniería industrial</h4>
           <h5>lmcoronadom@unal.edu.co</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/andres.jpg" alt="Generic placeholder image" height="140" width="140">
           <h3>Andres Esteban Espinosa Osorio</h3>
           <h4>Estudiante de ingeniería de sistemas e informática</h4>
           <h5>aeespinosao@unal.edu.co</h5>
