--- a/index.html
+++ b/index.html
@@ -81,22 +81,12 @@
                  <ul class="dropdown-menu">
                     <li><a href="html/flujofondos.html">Flujo de fondos puro</a></li>
                     <li><a href="html/flujofondosf.html">Flujo de fondos financiado</a></li>
+                     <li><a href="html/resumen.html">Resumen</a></li>
                   </ul>
                 </li>
+                <li><a href="html/maqueta.html"> <i class="fa fa-clipboard" aria-hidden="true"></i> Maqueta </a></li>
               </ul>
               
-              <ul class="nav navbar-nav navbar-right">
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                      Divisas <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-usd" style="color:green;" aria-hidden="true"></i> 2.917,95 <i class="fa fa-arrow-up" style="color:green;"aria-hidden="true"></i></p> </a></li>
-                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-eur" style="color:green;" aria-hidden="true"></i> 3.279,00 <i class="fa fa-arrow-up" style="color:green;"aria-hidden="true"></i></p> </a></li>
-                      <li><a href="#"> <p style="font-size:20px;"> <i class="fa fa-gbp" style="color:green;" aria-hidden="true"></i> 3.783,41 <i class="fa fa-arrow-down" style="color:green;"aria-hidden="true"></i></p> </a></li>
-                    </ul>
-                  </li>
-                </ul>
             </div>
           </div>
         </nav>
