--- a/html/estructuracostos.html
+++ b/html/estructuracostos.html
@@ -92,8 +92,10 @@
                  <ul class="dropdown-menu">
                     <li><a href="flujofondos.html">Flujo de fondos puro</a></li>
                     <li><a href="flujofondosf.html">Flujo de fondos financiado</a></li>
+                    <li><a href="resumen.html">Resumen</a></li>
                   </ul>
                 </li>
+                <li><a href="maqueta.html"> <i class="fa fa-clipboard" aria-hidden="true"></i> Maqueta </a></li>
               </ul>
             </div>
           </div>
