--- a/html/maqueta.html
+++ b/html/maqueta.html
@@ -58,7 +58,7 @@
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class=""><a href=""> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
+                <li class="../index.html"><a href=""> <i class="fa fa-home" aria-hidden="true"></i> Inicio</a></li>
                 <li><a href="about.html"> <i class="fa fa-users" aria-hidden="true"></i> Integrantes</a></li>
                 <li><a href="presentations.html"> <i class="fa fa-television" aria-hidden="true"></i> Poster & presentaciones </a></li>
                 <li class="dropdown">
