Pagina casi final

--- a/html/about.html
+++ b/html/about.html
@@ -128,7 +128,7 @@
           <h5>aeespinosao@unal.edu.co</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/julian.jpg" alt="Generic placeholder image" height="140" width="140">
           <h3>Julián Camilo Granados Pérez</h3>
           <h4>Estudiante de ingeniería de petróleos</h4>
           <h5>jcgranadosp@unal.edu.co</h5>
@@ -138,19 +138,19 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/jonatan.jpg" alt="Generic placeholder image" height="140" width="140">
           <h3>Jhonatan David Restrepo Reyes</h3>
           <h4>Estudiante de ingeniería mecánica</h4>
           <h5>jhdrestrepore@unal.edu.co</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/caro.jpg" alt="Generic placeholder image" height="140" width="140">
           <h3>Andrea Carolina Sánchez Valdés </h3>
           <h4>Estudiante de ingeniería administrativa</h4>
           <h5>ancsanchezva@unal.edu.co</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/sebastian.jpg" alt="Generic placeholder image" height="140" width="140">
           <h3>Sebastian Velasquez Morales	</h3>
           <h4>Estudiante de ingeniería eléctrica</h4>
           <h5>sevelasquezmo@unal.edu.co</h5>
