final final de los finales

--- a/html/about.html
+++ b/html/about.html
@@ -104,13 +104,13 @@
       <!-- Three columns of text below the carousel -->
       <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-          <img class="img-circle" src="../images/miguel.jpg" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/miguel.png" alt="Generic placeholder image" height="140" width="140">
           <h3>Miguel David Rojas López Ph.D.</h3>
           <h4>Pofesor asociado</h4>
           <h5>mdrojas@unal.edu.co</h5>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="../images/isabel.jpg" alt="Generic placeholder image" height="140" width="140">
+          <img class="img-circle" src="../images/isabel.png" alt="Generic placeholder image" height="140" width="140">
           <h3>Laura Isabel Martínez Murillo</h3>
           <h4>Ingeniera administradora</h4>
           <h5>limartinezm@unal.edu.co</h5>
