--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <span class="icon-bar"></span>
               </button>
               <div>
-                  <a class="navbar-brand" href="" style="margin:0px; padding:0px;"><img src="images/logo1.png" width="200px" height="100%" style="" alt="Logo energypaz"></a>
+                  <a class="navbar-brand" href="#" style="margin:0px; padding:0px;"><img src="images/logo1.png" width="200px" height="100%" style="" alt="Logo energypaz"></a>
                   
               </div>
               
