--- a/html/estudiomercado.html
+++ b/html/estudiomercado.html
@@ -67,7 +67,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="../index.html"><i class="fa fa-bolt" style=" color: #FFFF00; margin-right:10px;" aria-hidden="true"></i>EnergyPAZ</a>
+              <div>
+                  <a class="navbar-brand" href="../index.html" style="margin:0px; padding:0px;"><img src="../images/logo1.png" width="200px" height="100%" style="" alt="Logo energypaz"></a>
+                  
+              </div>
             </div>
             <div style="height: 1px;" aria-expanded="false" id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
