--- a/html/estudioambiental.html
+++ b/html/estudioambiental.html
@@ -123,7 +123,7 @@
             <h2><b>Impacto ambiental.</b></h2><br>
             <p class="lead">Las fuentes de energía renovables contra los combustibles fósiles, constituyen fuentes prácticamente inagotables además de que son poco dañinas para el medio ambiente <b>[1]</b>.</p>
             <p class="lead">La generación de energía eléctrica a partir de la energía solar al no usar ningún tipo de combustión no produce emisiones de gases contaminantes y es silenciosa, lo que representa una clara ventaja frente a otras fuentes de generación de energía no convencionales. Aunque podría presentarse un efecto de contaminación visual sobre el paisaje, igualmente puede afectar el suelo, la fauna y flora de la zona.</p>
-            <p class="lead">los sistemas fotovoltaicos sólo generan contaminación durante las distintas etapas de fabricación de los componentes del sistema. La energía invertida en el tiempo de producción es siempre recuperable <b>[2]</b>, para un plazo de 2 - 3 años ya se ha recuperado la energía que es significativamente menor a la vida útil del sistema fotovoltaico que es más de 25 años. </p>
+            <p class="lead">Los sistemas fotovoltaicos sólo generan contaminación durante las distintas etapas de fabricación de los componentes del sistema. La energía invertida en el tiempo de producción es siempre recuperable <b>[2]</b>, para un plazo de 2 - 3 años ya se ha recuperado la energía que es significativamente menor a la vida útil del sistema fotovoltaico que es más de 25 años. </p>
         </div>
       </div><!-- /.row -->
       
@@ -364,7 +364,7 @@
         <p class="pull-right"><a href="#">Back to top</a></p><br>
         <p>© 2016 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
       </footer>
-
+<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" style="cursor: pointer;  position: fixed; bottom: 20px; right: 20px; display:none;"role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span></a>
     </div><!-- /.container -->
 
 
@@ -380,7 +380,28 @@
     <script src="../js/ie10-viewport-bug-workaround.js"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  
+    <script>
+      $(document).ready(function(){
+             $(window).scroll(function () {
+                    if ($(this).scrollTop() > 50) {
+                        $('#back-to-top').fadeIn();
+                    } else {
+                        $('#back-to-top').fadeOut();
+                    }
+                });
+                // scroll body to 0px on click
+                $('#back-to-top').click(function () {
+                    $('#back-to-top').tooltip('hide');
+                    $('body,html').animate({
+                        scrollTop: 0
+                    }, 800);
+                    return false;
+                });
+
+                $('#back-to-top').tooltip('show');
+
+        });
+      </script>
 
     <svg style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;" preserveAspectRatio="none" viewBox="0 0 500 500" height="500" width="500" xmlns="http://www.w3.org/2000/svg"><defs><style type="text/css"></style></defs><text style="font-weight:bold;font-size:25pt;font-family:Arial, Helvetica, Open Sans, sans-serif" y="25" x="0">500x500</text></svg>
   </body>
