--- a/html/estudiotecnico.html
+++ b/html/estudiotecnico.html
@@ -566,7 +566,7 @@
         <p class="pull-right"><a href="#">Back to top</a></p><br>
         <p>© 2016 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
       </footer>
-
+<a id="back-to-top" href="#" class="btn btn-primary btn-lg back-to-top" style="cursor: pointer;  position: fixed; bottom: 20px; right: 20px; display:none;"role="button" title="Click to return on the top page" data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span></a>
     </div><!-- /.container -->
 
 
@@ -585,6 +585,26 @@
     <!-- highcharts framework -->
     <script src="../js/highcharts.js"></script>
     <script>
+        $(document).ready(function(){
+             $(window).scroll(function () {
+                    if ($(this).scrollTop() > 50) {
+                        $('#back-to-top').fadeIn();
+                    } else {
+                        $('#back-to-top').fadeOut();
+                    }
+                });
+                // scroll body to 0px on click
+                $('#back-to-top').click(function () {
+                    $('#back-to-top').tooltip('hide');
+                    $('body,html').animate({
+                        scrollTop: 0
+                    }, 800);
+                    return false;
+                });
+
+                $('#back-to-top').tooltip('show');
+
+        });
         $(function () {
             $('#grafica2').highcharts({
                 title: {
